k8s/overlays/dev/postgres-resources-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: crm
spec:
  template:
    spec:
      containers:
        - name: postgres
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
